<resources>
    <string name="app_name">Android Testing</string>
    <string name="name_hint">Your name</string>
    <string name="email_hint">Your email address</string>
    <string name="password_hint">Your password</string>
    <string name="error">Invalid data</string>
    <string name="send_button">Send</string>
    <string name="revert_button">Revert</string>
</resources>